--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "ajv": "^6.5.2",
     "body-parser": "^1.15.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
