--- a/projects/schema-form/package.json
+++ b/projects/schema-form/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
     "@angular/platform-browser": "^6.0.0",
+    "ajv": "^6.5.2",
     "body-parser": "^1.15.1",
     "core-js": "2.4.1",
     "methods": "^1.1.2",
