--- a/projects/schema-form/package.json
+++ b/projects/schema-form/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-schema-form",
+  "name": "ngx-schema-forms",
   "version": "2.0.0-beta.3",
   "repository": {
     "type": "git",
@@ -20,7 +20,8 @@
     "Frank Bessou <fbessou@free.fr>",
     "Eric Brehault <ebrehault@gmail.com>",
     "Simon Bats <contact@simonbats.com>",
-    "Gabor Pankotay <gabor.pankotay@swicon.hu>"
+    "Gabor Pankotay <gabor.pankotay@swicon.hu>",
+    "Juan Manuel Verges <juanmanuel@verges.com.do>"
   ],
   "peerDependencies": {
     "@angular/common": "^6.0.0",
