--- a/projects/schema-form/tsconfig.lib.json
+++ b/projects/schema-form/tsconfig.lib.json
@@ -15,7 +15,8 @@
     "typeRoots": [ "../../node_modules/@types" ],
     "lib": [
       "dom",
-      "es2015"
+      "es2015",
+      "ES2016.Array.Include"
     ]
   },
   "angularCompilerOptions": {
